--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <title>Welcome To Global Pen Consulting</title>
     <link rel="stylesheet" href="/styles.css">
+    <h1>Welcome!</h1>
+     
 </head>
 <body>
+    <div class="mainpage"></div>
+        <img src="/ourlogo.png" class="companylogo">
+    </div>      
 
 </body>
 </html>
