--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
                 </div>
             </div>
             <div class="homepageimage">
-                <img src="images/image10.jpg" class="bigpencilimage">
-                <div><img src="images/whiteimage.png" class="whitebackground">
-                <div><img src="images/ourlogo.png" class="companylogo2">
+                <img src="images/Penimage.jpg" class="bigpencilimage">
             </div>
+        </div>
+      
+        <div class="readmorebutton">
+            <a href="Readmore.html"><button class="readmore">Read More</button></a>
+        </div>
+        <div class="centerpicture">
+            <img src="images/centerimage.jpg" class="middleimage">
         </div>
     </div>              
 </body>
