--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
             <a href="Readmore.html"><button class="readmore">Read More</button></a>
         </div>
         <div class="centerpicture">
-            <img src="images/centerimage.jpg" class="middleimage">
+            <div><img src="images/centerimage.jpg" class="middleimage"></div>
+            <div class="overlaytext">Our story <br> lies in the exploits <br> of our pen.</div>
+            <div><img src="images/boyimage.png" class="boyimage"></div>
+            <div><img src="images/girlimage.png" class="girlimage"></div>
         </div>
     </div>              
 </body>
